# vin-decoder

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/v1/: vehicles.py
src/core/: config.py
src/db/: postgre.py
src/migrations/: env.py
src/migrations/versions/: cd6cf66192b5_create_vehicle_table.py
src/models/: vehicle.py
src/schemas/: vehicle.py
src/services/: decoder.py  vehicle.py
